# dcdr

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run.sh  run_worker.sh
dcdr/: CMakeLists.txt
dcdr-cli/: CMakeLists.txt
dcdr-cli/src/: main.cpp
dcdr-common/: CMakeLists.txt
dcdr-common/include/dcdr/: Constants.h  Exception.h  Types.h
dcdr-common/include/dcdr/renderer/: Chunk.h  ISPPDistribution.h  ISampleRenderer.h  UnbakedPixel.h
dcdr-common/include/dcdr/utils/: ArgsParser.h  Rng.h  RwLockProxy.h  StopWatch.h  Timer.h
dcdr-common/src/: Constants.cpp
dcdr-common/src/renderer/: Chunk.cpp  UnbakedPixel.cpp
dcdr-common/src/utils/: ArgsParser.cpp  Rng.cpp
dcdr-gui/: CMakeLists.txt
dcdr-gui/include/dcdr/gui/: CommanderExceptions.h  CommanderNode.h  ICommander.h  MainForm.h  MainFormWidgets.h
dcdr-gui/src/: Commander.cpp  Commander.h  CommanderNode.cpp  ICommander.h  IMainFormView.h  MainForm.cpp  MainForm.h  MainFormWidgets.cpp  main.cpp
dcdr-interconnect/: CMakeLists.txt
dcdr-interconnect/flatbuffers/: CMakeLists.txt  chunk.fbs  commander_request.fbs  commander_response.fbs  parcel.fbs  types.fbs  worker_request.fbs  worker_response.fbs
dcdr-interconnect/include/dcdr/messaging/: ACommanderRequestParcel.h  AParcelDeserializer.h  AParcelDispatcher.h  AParcelSerializer.h  AWorkerRequestParcel.h  ClientConnection.h  ConnectRequest.h  EmptyParcel.h  FlatBuffersParcelDeserializer.h  FlatBuffersParcelSerializer.h  FlatBuffersRequestDeserializer.h  FlatBuffersRequestSerializer.h  IParcel.h  IParcelDeserializer.h  IParcelDispatcher.h  IParcelSerializer.h  IRequest.h  IRequestDeserializer.h  IRequestProcessor.h  IRequestSerializer.h  IResponse.h  IResponseProcessor.h  IResponseSerializer.h  IServerConnectionResolver.h  InterconnectExceptions.h  InterconnectTypes.h  ServerConnection.h  WorkerConnectRequest.h
dcdr-interconnect/res/flatbuffers/: dcdr_flatbuffers.fbs  gen.sh
dcdr-interconnect/src/messaging/: ACommanderRequestParcel.cpp  AParcelDeserizlizer.cpp  AParcelDispatcher.cpp  AParcelSerializer.cpp  AWorkerRequestParcel.cpp  ClientConnection.cpp  ConnectRequest.cpp  EmptyParcel.cpp  FlatBuffersParcelDeserializer.cpp  FlatBuffersParcelSerializer.cpp  FlatBuffersRequestDeserializer.cpp  FlatBuffersRequestSerializer.cpp  ServerConnection.cpp  WorkerConnectRequest.cpp
dcdr-interconnect/src/messaging/commander/: ACommanderRequestParcel.cpp  ACommanderRequestParcelDispatcher.cpp  ACommanderResponseParcel.cpp  CommanderGetSurfaceInfoRequest.cpp  CommanderGetSurfaceInfoResponse.cpp  CommanderGetSurfaceRequest.cpp  CommanderGetSurfaceResponse.cpp  CommanderRequests.cpp  CommanderResponses.cpp
dcdr-interconnect/src/messaging/flatbuffers/: FlatBuffersBuilders.h  FlatBuffersCommanderRequestSerializer.cpp  FlatBuffersParcelDeserializer.cpp  FlatBuffersParcelSerializer.cpp
dcdr-interconnect/src/messaging/worker/: AWorkerRequestParcel.cpp  AWorkerResponseParcel.cpp  WorkerConnectRequest.cpp  WorkerRequests.cpp  WorkerResponses.cpp
dcdr-interconnect/src/serialization/: FlatBuffers.h  README
dcdr-logger/: CMakeLists.txt
dcdr-logger/include/dcdr/logging/: FileLogWriter.h  ILogWriter.h  Logger.h  StdoutLogWriter.h
dcdr-logger/src/logging/: FileLogWriter.cpp  Logger.cpp  StdoutLogWriter.cpp
dcdr-pathtracer/: CMakeLists.txt
dcdr-pathtracer/include/dcdr/pathtracing/: PathTracer.h
dcdr-pathtracer/include/dcdr/scene/: Camera.h  IMaterial.h  ISceneController.h  ISceneObject.h  SceneController.h
dcdr-pathtracer/src/pathtracer/: PathTracer.cpp
dcdr-pathtracer/src/scene/: SceneController.cpp
dcdr-renderer/: CMakeLists.txt
dcdr-renderer/src/renderer/: Camera.cpp  ChunkRenderer.cpp  ColorTexture.cpp  Material.cpp  MeshGeometry.cpp  PathTracer.cpp  Pixel.cpp  Scene.cpp  SceneObject.cpp  SphereGeometry.cpp
dcdr-server/: CMakeLists.txt
dcdr-server/src/: main.cpp
dcdr-server/src/connection/: INetworkConnection.h
dcdr-server/src/server/: Chunk.cpp  Connection.cpp  CoreContext.cpp  DummySceneLoader.cpp  Job.cpp  Node.cpp  Scene.cpp  Surface.cpp  Work.cpp
dcdr-server/src/webserver/: WebServer.cpp  WebServer.h  WebServerExceptions.h
dcdr-server/src/website/: index.html
dcdr-transport/: CMakeLists.txt
dcdr-transport/src/transport/: TcpAsyncServerTransport.cpp  TcpSyncClientTransport.cpp  WebsocketAsyncServerTransport.cpp  WebsocketSyncClientTransport.cpp
dcdr-worker/: CMakeLists.txt
dcdr-worker/src/: SceneLoader.cpp  SceneStorage.cpp  WorkerNode.cpp  main.cpp
dcdr-worker/src/database/: SQLiteCursor.cpp  SQLiteDatabase.cpp  SQLiteStatement.cpp  Statement.cpp
dcdr-worker/src/worker/: SceneLoader.cpp  WorkerNode.cpp
dcdr/include/dcdr/: Constants.h  Tracer.h  Types.h
dcdr/src/: Constants.cpp  DcdrConstants.cpp  DcdrConstants.h  DcdrTypes.h  Tracer.cpp
dcdr/src/pathtracer/: PathTracer.cpp
dcdr/src/renderer/: Chunk.cpp  Chunk.h  ChunkExchangeNodeStub.cpp  ChunkExchangeNodeStub.h  ChunkRendererStub.cpp  IChunkExchangeNode.h  IChunkRenderer.h  ISurfaceRasterizator.h  Surface.cpp  Surface.h  UnbakedPixel.cpp  UnbakedPixel.h
dcdr/src/scene/: Camera.cpp  Camera.h  IMaterial.h  ISceneObject.h  Scene.cpp
dcdr/src/tracing/: Intersection.h  IntersectionInfo.h  Ray.h
dcdr/src/utils/: Rng.cpp
libs/: CMakeLists.txt
libs/lodepng/: CMakeLists.txt
libs/microtar/: CMakeLists.txt
libs/mongoose/: CMakeLists.txt
tests/: CMakeLists.txt  UmathTest.h  VectorTest.cpp  main.cpp
tests/dcdr-interconnect-test/: CMakeLists.txt  FlatBuffersExchangeTest.cpp  FlatBuffersInterconnectTest.cpp
tests/dcdr-interconnect-test/flatbuffers/: CommanderFlatBuffers.cpp  FlatBuffersTest.h  WorkerFlatBuffers.cpp
tests/dcdr-server-test/: CMakeLists.txt  ChunkTest.cpp  SurfaceTest.cpp
tests/fixtures/: UmathTest.h
tests/test-utils/: CMakeLists.txt
tests/umath/: Mat4Test.cpp  Vec3Test.cpp  VectorTest.cpp
tests/umath-test/: CMakeLists.txt  Mat4Test.cpp  Vec3Test.cpp  main.cpp
tests/utils/: approx.h
umath/: CMakeLists.txt
umath/include/umath/: Intersections.h  Mat4.h  Operations.h  Vec3.h  Vector.h
umath/src/: Vector.cpp
(+191 files in other folders)
